# sumcalc

./: README.md  pyproject.toml
sumcalc/: pyproject.toml
sumcalc/sumcalc/: operations.py
sumcalc/tests/: test_operations.py
